src/test/deca/syntax/valid/declClass-money.deca
class $$$ {
    int $$$;

    int money() {
        return $$$;
    }

    void noMoney() {
    }
}

class Antoine {
    $$$ $$$;
}

{
    Antoine antoine = new Antoine();
    $$$ money = antoine.$$$;
    money.noMoney();
}