src/test/deca/syntax/invalid/while-withoutBody.deca
{
    int a = 5;
    int b = 7;
    while (a < b);
}